# rag

./: .env.example  .gitignore  README.md  app.py  pattern.py  prd.md  pyproject.toml  run.py
docs/: bus_schedule.json  menu.json
ragas_dataset/: evaluation_results_20250705_073445.json  evaluation_results_20250705_082016.json  evaluation_results_20250705_093811.json  evaluation_results_20250705_110642.json  evaluation_results_20250705_180049.json  evaluation_results_20250705_183401.json  evaluation_results_20250705_184535.json  evaluation_results_20250705_195306.json  rag_evaluation_dataset_50.csv  ragas_evaluation_dataset_100.csv  ragas_test_dataset_2026정책.csv  sample.csv
src/: __init__.py  config.py
src/components/: document_loader.py  embeddings.py  vector_store.py
src/config/: __init__.py  settings.py
src/graphs/: advanced_rag_graph.py  document_discovery_graph.py  json_rag_graph.py  modular_rag_graph.py  naive_rag_graph.py  report_generation_graph.py  translation_graph.py  web_search_graph.py
src/rag_systems/: __init__.py  advanced_rag.py  document_discovery_rag.py  json_rag.py  modular_rag.py  naive_rag.py  report_generation_rag.py  translation_rag.py  web_search_rag.py
src/ui/: about_ui.py  comparison_ui.py  document_discovery_ui.py  document_loading_ui.py  json_services_ui.py  rag_experiment_ui.py  ragas_evaluation_ui.py  report_generation_ui.py  translation_ui.py  vector_store_ui.py  web_search_ui.py
src/utils/: document_processor.py  embeddings.py  font_utils.py  llm_manager.py  vector_store.py
